# ncdc-ctrl-c

./: .gitignore  COPYING  ChangeLog  GNUmakefile.am  HACKING  Makefile.am  README  configure.ac  configure.in
doc/: GNUmakefile.am  gendoc.c  ncdc.pod.in
src/: GNUmakefile.am  bloom.c  cc.c  commands.c  db.c  dl.c  dlfile.c  doc.h  fl_load.c  fl_local.c  fl_save.c  fl_util.c  geoip.c  hub.c  listen.c  main.c  ncdc.h  net.c  proto.c  search.c  strutil.c  tth.c  ui.c  ui_colors.c  ui_listing.c  ui_logwindow.c  ui_textinput.c  ui_util.c  uit_conn.c  uit_dl.c  uit_fl.c  uit_hub.c  uit_main.c  uit_msg.c  uit_search.c  uit_userlist.c  util.c  vars.c  xmlread.c
static/: GNUmakefile  build.sh  meson-cross-aarch64.txt  meson-cross-arm.txt  meson-cross-i486.txt  meson-cross-x86_64.txt
util/: GNUmakefile.am
